prodcut update some status api
